Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using hidden CPU Branched Path Tracing samples and not the Path Tracing samples #84872

Closed
opened 2021-01-19 23:04:55 +01:00 by Michael Klein · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.92 Beta, 2.93.0 Alpha, branch: master, commit date: 2021-01-18 23:28, hash: 09c7c63890
Worked: n.a.

Short description of error
Adaptive Sampling with GPU+CPU is using the hidden CPU Branched Path Tracing samples and not the samples set in GPU mode. I found this bug by random because I wondered why hybrid rendering takes so long and looks good with 128 samples while GPU only was fast and noisy as expected. The reason was that CPU sampling was set to BPT and 4.096 before I switched the device from CUDA to OptiX and GPU will not support BPT in this case. Rendering will not use the visible 128 samples but the hidden 4.096 samples.

Exact steps for others to reproduce the error

  • Set Preferences>System>Cycles Render Device to OptiX
  • Select CPU device
  • Set to BPT
  • Set high samples eg. 4.096
  • Select GPU device
  • Set low samples 128
  • Disable CPU in Preferences>System
  • Render in GPU mode: Result is fast and noisy
  • Enable CPU in Preferences>System
  • Render in GPU mode: Result is slow and less noisy

Reason: The hidden CPU BPT samples of 4.096 will be used here and not the GPU PT samples of 128.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.92 Beta, 2.93.0 Alpha, branch: master, commit date: 2021-01-18 23:28, hash: `09c7c63890` Worked: n.a. **Short description of error** Adaptive Sampling with GPU+CPU is using the hidden CPU Branched Path Tracing samples and not the samples set in GPU mode. I found this bug by random because I wondered why hybrid rendering takes so long and looks good with 128 samples while GPU only was fast and noisy as expected. The reason was that CPU sampling was set to BPT and 4.096 before I switched the device from CUDA to OptiX and GPU will not support BPT in this case. Rendering will not use the visible 128 samples but the hidden 4.096 samples. **Exact steps for others to reproduce the error** - Set Preferences>System>Cycles Render Device to OptiX - Select CPU device - Set to BPT - Set high samples eg. 4.096 - Select GPU device - Set low samples 128 - Disable CPU in Preferences>System - Render in GPU mode: Result is fast and noisy - Enable CPU in Preferences>System - Render in GPU mode: Result is slow and less noisy Reason: The hidden CPU BPT samples of 4.096 will be used here and not the GPU PT samples of 128.
Author

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Extreme different behaviour between GPU or GPU+CPU (because CPU sampling is used) to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU is using hidden CPU sample rate and not the actual one 2021-01-19 23:14:45 +01:00
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU is using hidden CPU sample rate and not the actual one to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU is using CPU sample rate when set to Branched Path Tracing 2021-01-19 23:20:47 +01:00
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU is using CPU sample rate when set to Branched Path Tracing to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using CPU sample rate when set to Branched Path Tracing 2021-01-19 23:24:44 +01:00
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using CPU sample rate when set to Branched Path Tracing to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using CPU Branched Path Tracing sample rate and not the Path Tracing samples 2021-01-19 23:28:52 +01:00
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using CPU Branched Path Tracing sample rate and not the Path Tracing samples to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using hidden CPU Branched Path Tracing sample rate and not the Path Tracing samples 2021-01-19 23:31:37 +01:00
Michael Klein changed title from Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using hidden CPU Branched Path Tracing sample rate and not the Path Tracing samples to Blender 2.92/2.93 Adaptive Sampling: Hybrid GPU+CPU (OptiX/RTX) is using hidden CPU Branched Path Tracing samples and not the Path Tracing samples 2021-01-19 23:31:56 +01:00
Member

Added subscribers: @pmoursnv, @Alaska

Added subscribers: @pmoursnv, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

CC @pmoursnv as I believe you're the most intimate with the code affecting this area.

System Information
Operating system: Linux-5.10.0-1-amd64-x86_64-with-debian-bullseye 64 Bits
Graphics card: GeForce RTX 2060 SUPER 460.27.04

Blender Version
Broken version: 2.93.0 Alpha, branch: master, commit date: 2021-01-19 22:43, hash: 6290091bac

Can confirm. CC @pmoursnv as I believe you're the most intimate with the code affecting this area. **System Information** Operating system: Linux-5.10.0-1-amd64-x86_64-with-debian-bullseye 64 Bits Graphics card: GeForce RTX 2060 SUPER 460.27.04 **Blender Version** Broken version: 2.93.0 Alpha, branch: master, commit date: 2021-01-19 22:43, hash: `6290091bac`

This issue was referenced by 10d2cbfa36

This issue was referenced by 10d2cbfa369a512730a53192ccfe2473c9d96035
Patrick Mours self-assigned this 2021-01-20 13:34:30 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Added subscriber: @brecht

Added subscriber: @brecht
Author

@brecht This was fast. Good job!

@brecht This was fast. Good job!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84872
No description provided.